; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_id.c_ID0ioctl.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_id.c_ID0ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LogID0 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"%d = ioctl(%d, %lu, %p)\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ID0ioctl(i32 %0, i64 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = call i32 (...) @ID0set0()
  %9 = load i32, i32* %4, align 4
  %10 = load i64, i64* %5, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @ioctl(i32 %9, i64 %10, i8* %11)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* @LogID0, align 4
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load i64, i64* %5, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 @log_Printf(i32 %13, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %14, i32 %15, i64 %16, i8* %17)
  %19 = call i32 (...) @ID0setuser()
  %20 = load i32, i32* %7, align 4
  ret i32 %20
}

declare dso_local i32 @ID0set0(...) #1

declare dso_local i32 @ioctl(i32, i64, i8*) #1

declare dso_local i32 @log_Printf(i32, i8*, i32, i32, i64, i8*) #1

declare dso_local i32 @ID0setuser(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
